1.7_external_access_ingress/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hash-external-ingress
spec:
  type: ClusterIP
  selector:
    app: hash-external-ingress
  ports:
  - port: 1234
    targetPort: 8000
