1.7_external_access_ingress/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: hash-external-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hash-external-ingress
                port:
                  number: 1234
